HubSpot build & past branch commits
- Add maven and RPM building in blazar
- Our branch version munging script set-maven-versions can't parse the pom.xml due to unicode, remove it.
- Our build adds build.json files to the jars. Allowlist those files in jar content verification.
- Add client bundles for hbase2 (#11)
- Add AggregationClient to client bundle (#12)
- Shade hadoop compat classes so they can be loaded in hadoop jobs (#13)
- Fix client bundle metrics dep issues (#14)

--- a/hbase-assembly/pom.xml
+++ b/hbase-assembly/pom.xml
@@ -34,6 +34,15 @@
     <license.bundles.dependencies>true</license.bundles.dependencies>
   </properties>
   <dependencies>
+    <!--
+      Added by HubSpot since this module was in the original hadoop-three-compat moduleSet include list,
+      which is now converted to a dependencySet.
+    -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-annotations</artifactId>
+    </dependency>
+
     <!-- client artifacts for downstream use -->
     <dependency>
       <groupId>org.apache.hbase</groupId>
