--- a/hbase-common/pom.xml
+++ b/hbase-common/pom.xml
@@ -31,6 +31,9 @@
   <name>Apache HBase - Common</name>
   <description>Common functionality for HBase</description>
 
+  <properties>
+    <hubspot.build.version>${project.version}</hubspot.build.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.hbase</groupId>
@@ -200,7 +203,7 @@
             <phase>process-resources</phase>
             <configuration>
               <target>
-                <replace file="${project.build.outputDirectory}/hbase-default.xml" token="@@@VERSION@@@" value="${project.version}"/>
+                <replace file="${project.build.outputDirectory}/hbase-default.xml" token="@@@VERSION@@@" value="${hubspot.build.version}"/>
               </target>
             </configuration>
           </execution>
@@ -216,7 +219,7 @@
                 <property location="${project.build.directory}/generated-sources" name="generated.sources"/>
 
                 <exec executable="bash" failonerror="true">
-                  <arg line="${basedir}/src/saveVersion.sh ${project.version} ${generated.sources}/java"/>
+                  <arg line="${basedir}/src/saveVersion.sh ${hubspot.build.version} ${generated.sources}/java"/>
                 </exec>
               </target>
             </configuration>
