HBASE-26655. Implement new OAuth Bearer SASL plugin
Signed-off-by: Josh Elser <elserj@apache.org>

--- a/hbase-server/pom.xml
+++ b/hbase-server/pom.xml
@@ -349,6 +349,10 @@
       <artifactId>bcpkix-jdk15on</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.nimbusds</groupId>
+      <artifactId>nimbus-jose-jwt</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <!-- Make sure resources get added before they are processed by placing this first
