HBASE-26947 Implement a special TestAppender to limit the size of test output

--- a/hbase-logging/src/test/resources/log4j2.properties
+++ b/hbase-logging/src/test/resources/log4j2.properties
@@ -19,10 +19,12 @@
 status = debug
 dest = err
 name = PropertiesConfig
+packages = org.apache.hadoop.hbase.logging
 
-appender.console.type = Console
+appender.console.type = HBaseTest
 appender.console.target = SYSTEM_ERR
 appender.console.name = Console
+appender.console.maxSize = 1G
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{ISO8601} %-5p [%t] %C{2}(%L): %m%n
 
