Missed the addition to hbase-assembly

--- a/hbase-assembly/pom.xml
+++ b/hbase-assembly/pom.xml
@@ -316,6 +316,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-compression-brotli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-compression-lz4</artifactId>
     </dependency>
     <dependency>
