--- a/pom.xml
+++ b/pom.xml
@@ -628,7 +628,8 @@
     <surefire.version>3.0.0-M6</surefire.version>
     <wagon.ssh.version>2.12</wagon.ssh.version>
     <xml.maven.version>1.0.1</xml.maven.version>
-    <spotless.version>2.21.0</spotless.version>
+    <spotless.version>2.22.2</spotless.version>
+    <maven-site.version>3.11.0</maven-site.version>
     <!-- compression -->
     <aircompressor.version>0.21</aircompressor.version>
     <brotli4j.version>1.7.1</brotli4j.version>
@@ -2283,6 +2284,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>${maven-site.version}</version>
         <configuration>
           <siteDirectory>${basedir}/src/site</siteDirectory>
           <customBundle>${basedir}/src/site/custom/project-info-report.properties</customBundle>
@@ -2374,10 +2376,25 @@
         <artifactId>spotless-maven-plugin</artifactId>
         <version>${spotless.version}</version>
         <configuration>
-          <!-- optional: limit format enforcement to just the files changed from this point -->
-          <ratchetFrom>762390045ba2cc5884e91ecbe363015b7e684878</ratchetFrom>
           <!-- define a language-specific format -->
           <java>
+            <excludes>
+              <exclude>**/generated/*</exclude>
+              <exclude>**/package-info.java</exclude>
+            </excludes>
+            <!--
+              e.g., remove the following lines:
+              "* @param paramName"
+              "* @throws ExceptionType"
+              "* @return returnType"'
+              Multiline to allow anchors on newlines
+            -->
+            <replaceRegex>
+              <name>Remove unhelpful javadoc stubs</name>
+              <searchRegex>(?m)^ *\* *@(?:param|throws|return) *\w* *\n</searchRegex>
+              <!-- spotless manve plugin does not allow empty here, so use \n -->
+              <replacement>\n</replacement>
+            </replaceRegex>
             <!-- apply a specific flavor -->
             <eclipse>
               <file>${session.executionRootDirectory}/dev-support/hbase_eclipse_formatter.xml</file>
@@ -2385,19 +2402,40 @@
             <importOrder>
               <file>${session.executionRootDirectory}/dev-support/eclipse.importorder</file>
             </importOrder>
+            <trimTrailingWhitespace/>
+            <endWithNewline/>
             <!-- make sure every file has the following copyright header.
               optionally, Spotless can set copyright years by digging
               through git history (see "license" section below) -->
             <licenseHeader>
               <file>${session.executionRootDirectory}/dev-support/license-header</file>
             </licenseHeader>
+            <removeUnusedImports/>
           </java>
           <pom>
             <sortPom>
               <expandEmptyElements>false</expandEmptyElements>
             </sortPom>
           </pom>
-          <removeUnusedImports/>
+          <formats>
+            <!-- you can define as many formats as you want, each is independent -->
+            <format>
+              <!-- define the files to apply to -->
+              <includes>
+                <include>**/*.xml</include>
+                <include>**/*.sh</include>
+                <include>**/*.py</include>
+                <include>**/Jenkinsfile*</include>
+                <include>**/*.md</include>
+                <include>*.md</include>
+                <include>**/*.txt</include>
+                <include>*.txt</include>
+              </includes>
+              <!-- define the steps to apply to those files -->
+              <trimTrailingWhitespace/>
+              <endWithNewline/>
+            </format>
+          </formats>
         </configuration>
       </plugin>
     </plugins>
