HBASE-26892 Add spotless:check in our pre commit general check (#4393)
Signed-off-by: Nick Dimiduk <ndimiduk@apache.org>
(cherry picked from commit 386869a428bc6256d44436cd4cd5d668a919aacd)

--- a/pom.xml
+++ b/pom.xml
@@ -2246,6 +2246,10 @@
                 <include>**/*.txt</include>
                 <include>*.txt</include>
               </includes>
+              <excludes>
+                <exclude>**/target/**</exclude>
+                <exclude>**/dependency-reduced-pom.xml</exclude>
+              </excludes>
               <!-- define the steps to apply to those files -->
               <trimTrailingWhitespace/>
               <endWithNewline/>
