CDPD-39759 Add in netty-all back to test scope to account for missing class
Downstream, HDFS minicluster is not pulling in a netty4 dependency that
it needs at runtime (which, for us, is test-time). Add in a test-scope
dependency so that all of HBase tests can continue to function. User
classpath does not change (still hbase-shaded-netty from
hbase-thirdparty) so there isn't a big risk with this change.

Also, Revert "CDPD-35172 Ignore TestShadedHBaseTestingUtility"

This reverts commit b062d41faa90c6c294cc8cd64db97c807831e712.

Change-Id: Idba4e54ce510bf1c3902b0950578f7b3a67fb50e

--- a/hbase-it/pom.xml
+++ b/hbase-it/pom.xml
@@ -203,6 +203,11 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
