--- a/hbase-shaded/hbase-shaded-testing-util-tester/pom.xml
+++ b/hbase-shaded/hbase-shaded-testing-util-tester/pom.xml
@@ -75,6 +75,12 @@
       <version>1.9.13</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hbase.thirdparty</groupId>
+      <artifactId>hbase-shaded-netty</artifactId>
+      <version>${hbase-thirdparty.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
