--- a/hbase-rest/pom.xml
+++ b/hbase-rest/pom.xml
@@ -268,6 +268,11 @@
       <artifactId>log4j</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <!-- Makes sure the resources get added before they are processed
