HBASE-27006 addendum ensure a SCM checkout happens on the large node.

--- a/dev-support/Jenkinsfile
+++ b/dev-support/Jenkinsfile
@@ -765,6 +765,9 @@ pipeline {
             BRANCH = "${env.BRANCH_NAME}"
           }
           steps {
+            dir('component') {
+              checkout scm
+            }
             sh '''#!/bin/bash -e
               echo "Setting up directories"
               rm -rf "output-srctarball" && mkdir "output-srctarball"
