--- a/dev-support/Jenkinsfile
+++ b/dev-support/Jenkinsfile
@@ -750,6 +750,11 @@ pipeline {
         // See http://hbase.apache.org/book.html#maven.release
         // TODO (HBASE-23870): replace this with invocation of the release tool
         stage ('packaging and integration') {
+          agent {
+            node {
+              label 'hbase-large'
+            }
+          }
           tools {
             maven 'maven_latest'
             // this needs to be set to the jdk that ought to be used to build releases on the branch the Jenkinsfile is stored in.
@@ -760,6 +765,9 @@ pipeline {
             BRANCH = "${env.BRANCH_NAME}"
           }
           steps {
+            dir('component') {
+              checkout scm
+            }
             sh '''#!/bin/bash -e
               echo "Setting up directories"
               rm -rf "output-srctarball" && mkdir "output-srctarball"
