HBASE-26523 + HBASE-25465 + HBASE-26855 backport to branch-2.4 (#4439)
* HBASE-26523 Upgrade hbase-thirdparty dependency to 4.0.1 (#3988)

Signed-off-by: GeorryHuang <huangzhuoyue@apache.org>

* HBASE-25465 Use javac --release option for supporting cross version compilation (#4164)

Signed-off-by: Andrew Purtell <apurtell@apache.org>

* HBASE-26855 Delete unnecessary dependency on jaxb-runtime jar (#4236)

Signed-off-by: Duo Zhang <zhangduo@apache.org>

* spotless apply

Co-authored-by: Duo Zhang <zhangduo@apache.org>
Co-authored-by: Nick Dimiduk <ndimiduk@apache.org>

Signed-off-by: Andrew Purtell <apurtell@apache.org>

--- a/hbase-rest/pom.xml
+++ b/hbase-rest/pom.xml
@@ -166,10 +166,6 @@
       <artifactId>javax.activation</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.jaxrs</groupId>
-      <artifactId>jackson-jaxrs-json-provider</artifactId>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
     </dependency>
@@ -180,6 +176,10 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase.thirdparty</groupId>
+      <artifactId>hbase-shaded-jackson-jaxrs-json-provider</artifactId>
     </dependency>
     <dependency>
       <!-- We *might* need this for XMLStreamReader use in RemoteAdmin
@@ -514,15 +514,6 @@
         <dependency>
           <groupId>org.apache.hadoop</groupId>
           <artifactId>hadoop-auth</artifactId>
-        </dependency>
-        <!--Needed when jdk11/hadoop3 else complaint about
-          NoSuchMethodError: 'java.util.Map javax.ws.rs.core.Application.getProperties()'
-          when REST server is started.
-          -->
-        <dependency>
-          <groupId>org.glassfish.jaxb</groupId>
-          <artifactId>jaxb-runtime</artifactId>
-          <version>2.3.2</version>
         </dependency>
       </dependencies>
     </profile>
