Add netty-all to hadoop-hdfs test context... to fix tests failing trying to init minidfscluster with:
java.lang.NoClassDefFoundError: io/netty/handler/codec/http/HttpRequest
  at java.lang.Class.getDeclaredMethods0(Native Method)
  at java.lang.Class.privateGetDeclaredMethods(Class.java:2701)
  at java.lang.Class.getDeclaredMethod(Class.java:2128)
  at org.apache.hadoop.hdfs.server.datanode.web.DatanodeHttpServer.getFilterHandlers(DatanodeHttpServer.java:279)
  at org.apache.hadoop.hdfs.server.datanode.web.DatanodeHttpServer.<init>(DatanodeHttpServer.java:149)
  at org.apache.hadoop.hdfs.server.datanode.DataNode.startInfoServer(DataNode.java:977)
  at org.apache.hadoop.hdfs.server.datanode.DataNode.startDataNode(DataNode.java:1412)
  at org.apache.hadoop.hdfs.server.datanode.DataNode.<init>(DataNode.java:507)
  at org.apache.hadoop.hdfs.server.datanode.DataNode.makeInstance(DataNode.java:2828)
  at org.apache.hadoop.hdfs.server.datanode.DataNode.instantiateDataNode(DataNode.java:2734)
  at org.apache.hadoop.hdfs.MiniDFSCluster.startDataNodes(MiniDFSCluster.java:1755)
  at org.apache.hadoop.hdfs.MiniDFSCluster.initMiniDFSCluster(MiniDFSCluster.java:969)
  at org.apache.hadoop.hdfs.MiniDFSCluster.<init>(MiniDFSCluster.java:864)

--- a/pom.xml
+++ b/pom.xml
@@ -3832,13 +3832,18 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-reload4j</artifactId>
               </exclusion>
+              <!--
+              Needed in test context when hadoop-3.3 runs.
               <exclusion>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
               </exclusion>
+              -->
             </exclusions>
           </dependency>
           <dependency>
+            <!-- Is this needed? Seems a duplicate of the above dependency but for the 
+            classifier-->
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop-three.version}</version>
