HBASE-27121 Set version as 3.0.0-alpha-3 in master in prep for first RC of 3.0.0-alpha-3

--- a/hbase-annotations/pom.xml
+++ b/hbase-annotations/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase</artifactId>
-    <version>3.0.0-alpha-3-SNAPSHOT</version>
+    <version>3.0.0-alpha-3</version>
     <relativePath>..</relativePath>
   </parent>
 
