--- a/hbase-checkstyle/pom.xml
+++ b/hbase-checkstyle/pom.xml
@@ -25,11 +25,11 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase</artifactId>
-    <version>3.0.0-alpha-3-SNAPSHOT</version>
+    <version>3.0.0-alpha-3</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>hbase-checkstyle</artifactId>
-  <version>3.0.0-alpha-3-SNAPSHOT</version>
+  <version>3.0.0-alpha-3</version>
   <name>Apache HBase - Checkstyle</name>
   <description>Module to hold Checkstyle properties for HBase.</description>
 
