HBASE-27208 Use spotless to purge the missing summary warnings from error prone (#4628)
Signed-off-by: Andrew Purtell <apurtell@apache.org>
(cherry picked from commit 7484a9163a438f2cd9c4e0ac5ab88b00b3340737)

--- a/pom.xml
+++ b/pom.xml
@@ -2393,6 +2393,27 @@
               <!-- spotless manve plugin does not allow empty here, so use \n -->
               <replacement>\n</replacement>
             </replaceRegex>
+            <!--
+              e.g., rewrite
+              /** @return blabla */
+              or
+              /**
+               * @return blabla
+               */
+              to
+              /** Returns blabla */
+              See https://errorprone.info/bugpattern/FutureReturnValueIgnored
+            -->
+            <replaceRegex>
+              <name>Purge single returns tag multi line</name>
+              <searchRegex>(?m)^ */\*\*\n *\* *@return *(.*) *\n *\*/$</searchRegex>
+              <replacement>/** Returns $1 */</replacement>
+            </replaceRegex>
+            <replaceRegex>
+              <name>Purge single returns tag single line</name>
+              <searchRegex>^ */\*\* *@return *(.*) *\*/$</searchRegex>
+              <replacement>/** Returns $1 */</replacement>
+            </replaceRegex>
             <!-- apply a specific flavor -->
             <eclipse>
               <file>${session.executionRootDirectory}/dev-support/hbase_eclipse_formatter.xml</file>
