CDPD-43982: Add native TLS encryption support to RPC server/client (#4666)
Change[1/4] for:  Backporting the changes related to HBASE-26666.

This commit does not contain secrets.

Signed-off-by: Duo Zhang <zhangduo@apache.org>
Signed-off-by: Bryan Beaudreault <bbeaudreault@apache.org>
(cherry picked from commit f8dcf0705538ffeddcaa5eff74c8c2f61f7a844a)
Change-Id: I6782126306c0c6bd91242285ef3b401288f040cc

--- a/hbase-server/pom.xml
+++ b/hbase-server/pom.xml
@@ -329,6 +329,16 @@
       <artifactId>netty-all</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <!-- Make sure resources get added before they are processed by placing this first
