HBASE-27292. Fix build failure against Hadoop 3.3.4 due to added dependency on okhttp. (#4687)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
(cherry picked from commit 00612106b5fa78a0dd198cbcaab610bd8b1be277)

--- a/hbase-shaded/pom.xml
+++ b/hbase-shaded/pom.xml
@@ -416,6 +416,15 @@
                     <pattern>org.agrona</pattern>
                     <shadedPattern>${shaded.prefix}.org.agrona</shadedPattern>
                   </relocation>
+                  <!-- okhttp -->
+                  <relocation>
+                    <pattern>okhttp3.</pattern>
+                    <shadedPattern>${shaded.prefix}.okhttp3.</shadedPattern>
+                  </relocation>
+                  <relocation>
+                    <pattern>kotlin.</pattern>
+                    <shadedPattern>${shaded.prefix}.kotlin.</shadedPattern>
+                  </relocation>
                 </relocations>
                 <transformers>
                   <!-- Need to filter out some extraneous license files.
